// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Upload render function Add image 1`] = `
<CreateProfilePage
  addImage={[Function]}
>
  <div
    className="container"
  >
    <div
      className="profile-page tl"
    >
      <h1
        className="headline mt2"
      />
      <div
        className="profile-form mb3"
      >
        <div
          className="row clearfix m-0"
        >
          <div
            className="col-3"
          >
            <ImageUpload
              buttonText="Upload profilbillede"
              onFile={[Function]}
              previewImage={null}
              style={
                Object {
                  "borderRadius": "50%",
                }
              }
            >
              <div
                className="image-upload undefined"
              >
                <div
                  className="image-upload--zone position-relative"
                  style={
                    Object {
                      "borderRadius": "50%",
                      "height": "150px",
                      "overflow": "hidden",
                      "width": "150px",
                    }
                  }
                >
                  <div
                    className="d-flex align-items-center justify-content-center h-100 "
                  >
                    <Icon
                      className="md-xxlarge"
                      name="image"
                    >
                      <i
                        className="material-icons material-icons-image md-xxlarge "
                        onClick={[Function]}
                      >
                        image
                      </i>
                    </Icon>
                  </div>
                  <div
                    className="droppable-image-overlay w-100 h-100"
                  />
                </div>
                <div
                  style={
                    Object {
                      "clear": "both",
                    }
                  }
                />
                <UploadButton
                  buttonText="Upload profilbillede"
                  className="mt-2"
                  readFiles={[Function]}
                >
                  <label
                    className="mt-2"
                  >
                    <Button
                      Tag="span"
                      size="small"
                      type="tertiary"
                    >
                      <span
                        className="
                            btn Button Button__small Button__tertiary "
                        data-cy=""
                        disabled={false}
                      >
                        <span>
                          <span
                            className="align-middle"
                          >
                            Upload profilbillede
                          </span>
                        </span>
                      </span>
                    </Button>
                    <input
                      accept="image/png, image/jpeg"
                      className="droppable-image-field--file-input"
                      onChange={[Function]}
                      type="file"
                    />
                  </label>
                </UploadButton>
                <Error />
              </div>
            </ImageUpload>
          </div>
          <div
            className="col-9 mb2"
          >
            <p
              className="mb2"
            >
              <b>
                <T
                  component="profile"
                  name="enterInformations"
                >
                  Indtast dine personlige oplysninger:
                </T>
              </b>
            </p>
            <div
              className="mb2"
            >
              <UserProfileForm
                library={
                  <spinner
                    size="12px"
                  />
                }
              >
                <form
                  className="profile-form needs-validation"
                  onSubmit={[Function]}
                  style={
                    Object {
                      "maxWidth": "400px",
                    }
                  }
                >
                  <div
                    className="input-group mb2   has-feedback"
                  >
                    <input
                      className="form-control mb3   has-feedback"
                      data-cy="user-form-name"
                      name="name"
                      onChange={[Function]}
                      placeholder="Skriv brugernavn"
                      type="text"
                      value=""
                    />
                    <span
                      aria-hidden="true"
                      className="form-control-feedback "
                    >
                      <i
                        className="material-icons"
                        style={
                          Object {
                            "fontSize": 18,
                          }
                        }
                      >
                         
                      </i>
                    </span>
                  </div>
                  <p
                    className="mb6"
                  >
                    <T
                      component="login"
                      name="signedInby"
                    >
                      Du er logget på via
                    </T>
                     
                    <spinner
                      size="12px"
                    />
                  </p>
                  <label
                    className="checkbox"
                    data-cy="user-form-acceptedTerms"
                    htmlFor="acceptedTerms"
                  >
                    <input
                      checked={false}
                      className="checkbox"
                      id="acceptedTerms"
                      name="acceptedTerms"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <span />
                    <T
                      component="profile"
                      name="termsCheckboxText"
                    >
                      Jeg har læst og accepteret
                    </T>
                     
                    <a
                      href="#terms"
                    >
                      <T
                        component="profile"
                        name="termsCheckboxLink"
                      >
                        reglerne for anvendelse af Læsekompasset
                      </T>
                    </a>
                  </label>
                  <button
                    className="btn btn-success btn-block"
                    data-cy="user-form-submit"
                  >
                    <T
                      component="profile"
                      name="editProfile"
                    >
                      Redigér profil
                    </T>
                  </button>
                </form>
              </UserProfileForm>
            </div>
            <logout>
              <T
                component="profile"
                name="cancelCreateProfile"
              >
                Jeg ønsker alligevel ikke at oprette en profil
              </T>
            </logout>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="terms col-sm-12 col-md-6 "
          id="terms"
        >
          <Heading
            Tag="h2"
            className="mb2"
            type="lead"
          >
            <h2
              className="mb2 Heading Heading__lead"
            >
              Om læsekompas.dk
            </h2>
          </Heading>
          <Heading
            Tag="h3"
            className="mb0 mt2"
            type="title"
          >
            <h3
              className="mb0 mt2 Heading Heading__title"
            >
              Læsekompas.dk er dit inspirationsværktøj til at finde ny læsning
            </h3>
          </Heading>
          <Paragraph>
            <p
              className=" Paragraph Paragraph__whattocall"
            >
              Læsekompas.dk er bibliotekernes inspirationsværktøj til voksne læsere af skønlitteratur. Alle kan anvende Læsekompasset, men det kræver biblioteks-login, hvis du vil bestille bøger direkte i løsningen. Læsekompas.dk indeholder et udvalg af skønlitteratur for voksne, der er tilgængeligt til hjemlån eller som e-lån fra folkebiblioteker. Mængden af værker øges over tid og Læsekompasset sigter mod at tilbyde en bred vifte af litteratur. Alle værker indekseres med oplevelsesord for at gøre det muligt for brugere at navigere i litteratur på en ny måde. Der er mulighed for at fremfinde værker og bestille dem direkte i læsekompas.dk. Læsekompas.dk giver også brugere mulighed for at oprette og dele lister med bøger. Man skal være over 13 år for at oprette sig som bruger.
            </p>
          </Paragraph>
          <Heading
            Tag="h3"
            className="mb0 mt2"
            type="title"
          >
            <h3
              className="mb0 mt2 Heading Heading__title"
            >
              Beta-version af læsekompas.dk
            </h3>
          </Heading>
          <Paragraph>
            <p
              className=" Paragraph Paragraph__whattocall"
            >
              Læsekompas.dk er lanceret som en beta-version. Dette betyder, at vi fortsat tester og justerer. Den version af læsekompas.dk, du oplever er ikke helt færdigudviklet og du vil derfor opleve at løsningen udvikler sig over tid.
            </p>
          </Paragraph>
          <Heading
            Tag="h3"
            className="mb0 mt2"
            type="title"
          >
            <h3
              className="mb0 mt2 Heading Heading__title"
            >
              Hvem står bag?
            </h3>
          </Heading>
          <Paragraph>
            <p
              className=" Paragraph Paragraph__whattocall"
            >
              Læsekompas.dk er skabt og drives af de danske folkebiblioteker i samarbejde med DBC. 
              <br />
               
              <br />
               DBC as 
              <br />
               Tempovej 7-11
               
              <br />
               2750 Ballerup 
              <br />
               dbc@dbc.dk
            </p>
          </Paragraph>
          <Heading
            Tag="h3"
            className="mb0 mt2"
            type="title"
          >
            <h3
              className="mb0 mt2 Heading Heading__title"
            >
              Brugergenereret indhold
            </h3>
          </Heading>
          <Paragraph>
            <p
              className=" Paragraph Paragraph__whattocall"
            >
              Følgende regler gælder for indlæg og indhold, som du og andre brugere selv lægger på læsekompas.dk. Du er ansvarlig for, at dine indlæg er i overensstemmelse med den til enhver tid gældende lovgivning, herunder at dine indlæg ikke krænker tredjemands rettigheder, eksempelvis ophavsret til tekst og billeder. Egne fotos du uploader til Læsekompasset gøres tilgængelige under en creative commons licens, og du giver læsekompas.dk lov til at mangfoldiggøre, gøre tilgængelig for tredjemand og lave afledte værker. For alle informationer og alt materiale, du leverer til læsekompas.dk gælder, at du leverer det vederlagsfrit og til fri brug for læsekompas.dk. Læsekompas.dk kan ikke kontrollere og er ikke ansvarlig for indhold, som brugerne leverer, og for at du som bruger kan risikere at blive udsat for indhold, som du finder anstødeligt, fejlagtigt eller på anden måde kritisabelt. Du anerkender, at vi som udbyder ikke forhåndsgodkender brugernes indhold, men at vi har retten til uden nærmere begrundelse at fjerne enhver form for indhold, som offentliggøres via læsekompas.dk, hvis det er i modstrid med gældende lovgivning eller ordlyden af de her nævnte betingelser.
            </p>
          </Paragraph>
        </div>
      </div>
    </div>
  </div>
</CreateProfilePage>
`;

exports[`Image Upload render function renders an image upload form 1`] = `
<div
  className="container"
>
  <div
    className="profile-page tl"
  >
    <h1
      className="headline mt2"
    />
    <div
      className="profile-form mb3"
    >
      <div
        className="row clearfix m-0"
      >
        <div
          className="col-3"
        >
          <div
            className="image-upload undefined"
          >
            <div
              className="image-upload--zone position-relative"
              style={
                Object {
                  "borderRadius": "50%",
                  "height": "150px",
                  "overflow": "hidden",
                  "width": "150px",
                }
              }
            >
              <div
                className="d-flex align-items-center justify-content-center h-100 "
              >
                <i
                  className="material-icons material-icons-image md-xxlarge "
                  onClick={[Function]}
                >
                  image
                </i>
              </div>
              <div
                className="droppable-image-overlay w-100 h-100"
              >
                
              </div>
            </div>
            <div
              style={
                Object {
                  "clear": "both",
                }
              }
            />
            <label
              className="mt-2"
              style={undefined}
            >
              <span
                className="
                    btn Button Button__small Button__tertiary "
                data-cy=""
                disabled={false}
              >
                
                <span>
                  <span
                    className="align-middle"
                  >
                    Upload profilbillede
                  </span>
                </span>
                
              </span>
              <input
                accept="image/png, image/jpeg"
                className="droppable-image-field--file-input"
                name={undefined}
                onChange={[Function]}
                type="file"
              />
            </label>
          </div>
        </div>
        <div
          className="col-9 mb2"
        >
          <p
            className="mb2"
          >
            <b>
              Indtast dine personlige oplysninger:
            </b>
          </p>
          <div
            className="mb2"
          >
            <form
              className="profile-form needs-validation"
              onSubmit={[Function]}
              style={
                Object {
                  "maxWidth": "400px",
                }
              }
            >
              <div
                className="input-group mb2   has-feedback"
              >
                <input
                  className="form-control mb3   has-feedback"
                  data-cy="user-form-name"
                  name="name"
                  onChange={[Function]}
                  placeholder="Skriv brugernavn"
                  type="text"
                  value=""
                />
                <span
                  aria-hidden="true"
                  className="form-control-feedback "
                >
                  <i
                    className="material-icons"
                    style={
                      Object {
                        "fontSize": 18,
                      }
                    }
                  >
                     
                  </i>
                </span>
              </div>
              <p
                className="mb6"
              >
                Du er logget på via
                 
                <spinner
                  size="12px"
                />
              </p>
              <label
                className="checkbox"
                data-cy="user-form-acceptedTerms"
                htmlFor="acceptedTerms"
              >
                <input
                  checked={false}
                  className="checkbox"
                  disabled={undefined}
                  id="acceptedTerms"
                  name="acceptedTerms"
                  onChange={[Function]}
                  type="checkbox"
                />
                <span />
                Jeg har læst og accepteret
                 
                <a
                  href="#terms"
                >
                  reglerne for anvendelse af Læsekompasset
                </a>
              </label>
              <button
                className="btn btn-success btn-block"
                data-cy="user-form-submit"
                disabled={undefined}
              >
                Redigér profil
              </button>
            </form>
          </div>
          <logout>
            Jeg ønsker alligevel ikke at oprette en profil
          </logout>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="terms col-sm-12 col-md-6 "
        id="terms"
      >
        <h2
          className="mb2 Heading Heading__lead"
        >
          Om læsekompas.dk
        </h2>
        <h3
          className="mb0 mt2 Heading Heading__title"
        >
          Læsekompas.dk er dit inspirationsværktøj til at finde ny læsning
        </h3>
        <p
          className=" Paragraph Paragraph__whattocall"
        >
          Læsekompas.dk er bibliotekernes inspirationsværktøj til voksne læsere af skønlitteratur. Alle kan anvende Læsekompasset, men det kræver biblioteks-login, hvis du vil bestille bøger direkte i løsningen. Læsekompas.dk indeholder et udvalg af skønlitteratur for voksne, der er tilgængeligt til hjemlån eller som e-lån fra folkebiblioteker. Mængden af værker øges over tid og Læsekompasset sigter mod at tilbyde en bred vifte af litteratur. Alle værker indekseres med oplevelsesord for at gøre det muligt for brugere at navigere i litteratur på en ny måde. Der er mulighed for at fremfinde værker og bestille dem direkte i læsekompas.dk. Læsekompas.dk giver også brugere mulighed for at oprette og dele lister med bøger. Man skal være over 13 år for at oprette sig som bruger.
        </p>
        <h3
          className="mb0 mt2 Heading Heading__title"
        >
          Beta-version af læsekompas.dk
        </h3>
        <p
          className=" Paragraph Paragraph__whattocall"
        >
          Læsekompas.dk er lanceret som en beta-version. Dette betyder, at vi fortsat tester og justerer. Den version af læsekompas.dk, du oplever er ikke helt færdigudviklet og du vil derfor opleve at løsningen udvikler sig over tid.
        </p>
        <h3
          className="mb0 mt2 Heading Heading__title"
        >
          Hvem står bag?
        </h3>
        <p
          className=" Paragraph Paragraph__whattocall"
        >
          Læsekompas.dk er skabt og drives af de danske folkebiblioteker i samarbejde med DBC. 
          <br />
           
          <br />
           DBC as 
          <br />
           Tempovej 7-11
           
          <br />
           2750 Ballerup 
          <br />
           dbc@dbc.dk
        </p>
        <h3
          className="mb0 mt2 Heading Heading__title"
        >
          Brugergenereret indhold
        </h3>
        <p
          className=" Paragraph Paragraph__whattocall"
        >
          Følgende regler gælder for indlæg og indhold, som du og andre brugere selv lægger på læsekompas.dk. Du er ansvarlig for, at dine indlæg er i overensstemmelse med den til enhver tid gældende lovgivning, herunder at dine indlæg ikke krænker tredjemands rettigheder, eksempelvis ophavsret til tekst og billeder. Egne fotos du uploader til Læsekompasset gøres tilgængelige under en creative commons licens, og du giver læsekompas.dk lov til at mangfoldiggøre, gøre tilgængelig for tredjemand og lave afledte værker. For alle informationer og alt materiale, du leverer til læsekompas.dk gælder, at du leverer det vederlagsfrit og til fri brug for læsekompas.dk. Læsekompas.dk kan ikke kontrollere og er ikke ansvarlig for indhold, som brugerne leverer, og for at du som bruger kan risikere at blive udsat for indhold, som du finder anstødeligt, fejlagtigt eller på anden måde kritisabelt. Du anerkender, at vi som udbyder ikke forhåndsgodkender brugernes indhold, men at vi har retten til uden nærmere begrundelse at fjerne enhver form for indhold, som offentliggøres via læsekompas.dk, hvis det er i modstrid med gældende lovgivning eller ordlyden af de her nævnte betingelser.
        </p>
      </div>
    </div>
  </div>
</div>
`;
